# parser-wildberries

./: .gitignore  README.md  json.json  main.py  parser_wildberries.csv  parser_wildberries.xlsx  parser_wildberries_filter.csv  parses_wildberries_filter.xlsx  pyproject.toml  requirements.txt
src/parser_wildberries/: __init__.py  async_parse.py  file_saver.py
src/parser_wildberries/async_http/: async_request.py  base_http.py
utility/: async_parse.py  async_request.py  base_http.py  convert.py  file_saver.py  filter.py  parse.py
